fix dark mode

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -78,6 +78,7 @@ min-height:100%;
 	}
 }
 .hero {
+	width: 100%;
 	// position: absolute;
 	// left: 50%; top: 50%;
 	// transform: translate(-50%, -50%);
@@ -189,7 +190,14 @@ section > section {
 	// @extend .dark-background;
 	border:none;
 	iframe {
+		box-shadow: 1px 0px 2rem green;
 		margin-top: 2rem;
+		&:first-of-type {
+			margin-top: 0;
+		}
+	}
+	iframes {
+		
 		width:100%;
 		height: 100px;
 		box-shadow: 1px 0px 2rem green;
@@ -198,9 +206,7 @@ section > section {
 			width: 100%;
 		margin-inline: auto;
 		}
-		&:first-of-type {
-			margin-top: 0;
-		}
+		
 	}
 }
 
